# challenge-mle

./: .gitignore  CODEOWNERS  Dockerfile  Makefile  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
challenge/: __init__.py  api.py  config.py  exploration.ipynb  model.py  schemas.py  train_pipeline.py
docs/: challenge.md
metrics/: classification_report_20250514T19.json  classification_report_20250516T01.json
models/: delay_model_20250514T15.joblib  delay_model_20250514T19.joblib  delay_model_20250516T01.joblib
tests/api/: test_api.py
tests/model/: test_model.py
