[tool.poetry]
name = "challenge-mle"
version = "0.0.1"
description = "Python project to train and deploy a ML model"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.86.0,<0.87.0"
pydantic = ">=1.10.2,<1.11.0"
uvicorn = ">=0.15.0,<0.16.0"
numpy = ">=1.22.4,<1.23.0"
pandas = ">=1.3.5,<1.4.0"
scikit-learn = ">=1.3.0,<1.4.0"


[tool.poetry.group.dev.dependencies]
matplotlib = ">=3.7.2,<3.8.0"
seaborn = ">=0.12.2,<0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
